--- a/color/project.json
+++ b/color/project.json
@@ -8,7 +8,7 @@
         "width": 64,
         "height": 80,
         "title": "Colot Picker",
-        "icon": "extra/icon3.png"
+        "icon": "DEFAULT_ICON"
     },
 
     "entry": "main.lua",
